Safari - company details - fix for scrollbar

--- a/src/styles/_company-details.sass
+++ b/src/styles/_company-details.sass
@@ -5,6 +5,7 @@
         width: 100%
         display: grid
         overflow-y: hidden
+        grid-template-rows: 48px calc(100% - 48px)
         .form_button_wrap
             justify-content: flex-end
             pbx-button
